compiler/testData/diagnostics/tests/multiplatform/enum/constructorInHeaderEnum.kt
// IGNORE_FIR_DIAGNOSTICS
// RUN_PIPELINE_TILL: FIR2IR
// MODULE: m1-common
// FILE: common.kt

expect enum class <!NO_ACTUAL_FOR_EXPECT{JVM}!>En<!><!EXPECTED_ENUM_CONSTRUCTOR, EXPECTED_ENUM_CONSTRUCTOR{JVM}!>(x: Int)<!> {
    E1,
    E2<!SUPERTYPE_INITIALIZED_IN_EXPECTED_CLASS, SUPERTYPE_INITIALIZED_IN_EXPECTED_CLASS{JVM}!>(42)<!>,
    ;

    <!EXPECTED_ENUM_CONSTRUCTOR, EXPECTED_ENUM_CONSTRUCTOR{JVM}!>constructor(s: String)<!>
}

expect enum class <!NO_ACTUAL_FOR_EXPECT{JVM}!>En2<!> {
    E1<!NO_CONSTRUCTOR, NO_CONSTRUCTOR{JVM}, SUPERTYPE_INITIALIZED_IN_EXPECTED_CLASS, SUPERTYPE_INITIALIZED_IN_EXPECTED_CLASS{JVM}!>()<!>
}

// MODULE: m1-jvm()()(m1-common)
